tests/ui/impl-trait/in-trait/unconstrained-lt.stderr
error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/unconstrained-lt.rs:5:6
   |
LL | impl<'a, T> Foo for T {
   |      ^^ unconstrained lifetime parameter
   |
help: either remove the type parameter 'a, or make use of it, for example
   |
LL - impl<'a, T> Foo for T {
LL + impl<T> Foo for T {
   |
LL | impl<'a, T> Foo for T<'a> {
   |                      ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
